<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".EarningsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#2A2A2A">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginLeft="35dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Earnings"
            android:textColor="#F1BE48"
            android:textSize="50dp"
            android:textStyle="bold|italic"></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Primary Monthly Income"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="30dp"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/secondary"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:textSize="30dp"
            android:hint="Secondary Montlhy Income"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"></EditText>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <!--        <Button-->
        <!--            android:id="@+id/signup_login_btn"-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginRight="10dp"-->
        <!--            android:text="Login"-->
        <!--            android:textSize="20sp"-->
        <!--            android:backgroundTint="#C8102E">-->
        <!--        </Button>-->

        <Button
            android:id="@+id/submit"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Submit"
            android:textColor="#FFFFFF"
            android:backgroundTint="#C8102E"
            android:textSize="30sp"></Button>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>