...
    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="Expenses" />

    <item
        android:id="@+id/navigation_admin"
        android:icon="@drawable/ic_admin_panel"
        android:title="Admin" />


</menu>
