...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ui.Admin.AdminActivity"
    android:id="@+id/admin_layout"
    android:orientation="horizontal">

<!--    <TextView-->
<!--        android:id="@+id/text_user1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
...
